Revision history for {{$dist->name}}

{{$NEXT}}
  - added --trace option
  - added --output | -o option
  - fixes for empty commits (two sequential releases that are identical) (GH#8)
  - fixes for filenames with non ASCII characters (GH#8)
  - documented some previously undocumented options

0.11      2014-10-10 11:41:51 -0400
  - 'git rm' before 'git add'
    This seems to help on MSWin32, where I may have a newer version of git than on Debian Linux

0.10      2014-08-05 13:22:41 -0400
  - use HTTP::Tiny instead of LWP
    the former being part of the core as of Perl 5.14
  - use JSON::PP instead of JSON
    the former being part of the core as of Perl 5.14
  - use CPAN::ReleaseHistory instead of BackPAN::Index
    the latter may (?) be faster,
    but the former has lighter set of prereqs

0.09      2014-06-19 16:05:18 -0400
  - CPAN release (0.08 never made it to CPAN)

0.08      2014-01-08 06:10:17 -0500
  - make multiple tags a warning only
  - install with Module::Build instead of MakeMaker
  - use Archive::Extract instead of tar
  - use recursive Path::Class::File#remove and Path::Class::Dir#remove instead of calling system rm -rf

0.07      2013-10-18 12:41:40 -0400
  - make git 1.5.0 or better a requirement

0.06      2013-10-13 15:12:49 -0400
  - documentation (mention Git::CPAN::Patch)

0.05      2013-10-13 05:39:34 -0400
  - require BackPAN::Index 0.41

0.04_01   2013-10-11 17:38:22 -0400
  - include git version in test diagnostic

0.04      2013-10-09 20:29:45 -0400
  - change name to cpangitify
  - handle distros with name changes

0.03      2013-10-09 15:43:54 -0400
  - documentation

0.02      2013-10-09 13:57:30 -0400
  - include date and author info from cpan

0.01      2013-10-09 12:58:19 -0400
  - initial version